YAY! Assignment Done!

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,4 +43,22 @@
             <img class="work-img" src="images/latest-work/work-3.jpg" alt="work-3">
         </div>
     </section>
-</body></html>
+    <footer class="footer-bg">
+        <div class="footer-top">
+            <h2>What Clients Say</h2>
+            <h3>Bruce Moccy</h3>
+            <p>Founder &amp; CEO Alies</p>
+            <h4>"Lorem ipsum dolor sit amet, adipisicing elit.<br> numquam quo et, recusandae, obcaecati error saepe!"</h4>
+            <div class="send-email">
+                <p>Leave me a message</p>
+                <h2>programming.hero1&#64;gmail.com</h2>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>Programming Hero initiative. &copy; 2020 All rights Reserved.</p>
+        </div>
+    </footer>
+
+</body>
+
+</html>
