updated for bonus point!

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Website</title>
+    <script src="https://kit.fontawesome.com/6c1b3e31c7.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -54,9 +55,16 @@
                 <h2>programming.hero1&#64;gmail.com</h2>
             </div>
         </div>
+        <div class="social-media">
+            <a class="social-media" href="https://www.facebook.com/"><i title="Facebook" class="fab fa-facebook-square"></i></a>
+            <a class="social-media" href="https://twitter.com/"><i title="Twitter" class="fab fa-twitter-square"></i></a>
+            <a class="social-media" href="https://www.instagram.com/"><i title="Instagram" class="fab fa-instagram-square"></i></a>
+            <a class="social-media" href="https://github.com/"><i title="GitHub" class="fab fa-github-square"></i></a>
+        </div>
         <div class="footer-bottom">
             <p>Programming Hero initiative. &copy; 2020 All rights Reserved.</p>
         </div>
+
     </footer>
 
 </body></html>
