updated fo bonus marks!

--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
             </div>
         </div>
         <div class="social-media">
-            <a class="social-media" href="https://www.facebook.com/"><i title="Facebook" class="fab fa-facebook-square"></i></a>
-            <a class="social-media" href="https://twitter.com/"><i title="Twitter" class="fab fa-twitter-square"></i></a>
+            <a class="social-media" target="_blank" href="https://www.facebook.com/"><i title="Facebook" class="fab fa-facebook-square"></i></a>
+            <a class="social-media" target="_blank" href="https://twitter.com/"><i title="Twitter" class="fab fa-twitter-square"></i></a>
             <a class="social-media" href="https://www.instagram.com/"><i title="Instagram" class="fab fa-instagram-square"></i></a>
-            <a class="social-media" href="https://github.com/"><i title="GitHub" class="fab fa-github-square"></i></a>
+            <a class="social-media" target="_blank" href="https://www.instagram.com/"><i title="Instagram" class="fab fa-instagram-square"></i></a>
+            <a class="social-media" target="_blank" href="https://github.com/"><i title="GitHub" class="fab fa-github-square"></i></a>
         </div>
         <div class="footer-bottom">
             <p>Programming Hero initiative. &copy; 2020 All rights Reserved.</p>
