--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
         <div class="social-media">
             <a class="social-media" target="_blank" href="https://www.facebook.com/"><i title="Facebook" class="fab fa-facebook-square"></i></a>
             <a class="social-media" target="_blank" href="https://twitter.com/"><i title="Twitter" class="fab fa-twitter-square"></i></a>
-            <a class="social-media" href="https://www.instagram.com/"><i title="Instagram" class="fab fa-instagram-square"></i></a>
             <a class="social-media" target="_blank" href="https://www.instagram.com/"><i title="Instagram" class="fab fa-instagram-square"></i></a>
             <a class="social-media" target="_blank" href="https://github.com/"><i title="GitHub" class="fab fa-github-square"></i></a>
         </div>
@@ -68,4 +67,6 @@
 
     </footer>
 
-</body></html>
+</body>
+
+</html>
